ch04/canary_releases/envoy-front_proxy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 12345
      traffic_direction: INBOUND
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: example_route
                  virtual_hosts:
                    - name: front_proxy
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            weighted_clusters:
                              clusters:
                              - name: new_version
                                weight: 5
                              - name: old_version
                                weight: 95
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config: {}
  clusters:
    - name: old_version
      connect_timeout: 0.250s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: old_version
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: old_version
                      port_value: 5678
    - name: new_version
      connect_timeout: 0.250s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: new_version
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: new_version
                      port_value: 5678
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
